src/test/ui/test-warns-dead-code.stderr
error: function is never used: `dead`
  --> $DIR/test-warns-dead-code.rs:15:1
   |
LL | fn dead() {} //~ error: function is never used: `dead`
   | ^^^^^^^^^
   |
note: lint level defined here
  --> $DIR/test-warns-dead-code.rs:13:9
   |
LL | #![deny(dead_code)]
   |         ^^^^^^^^^

error: aborting due to previous error

