src/test/ui/test-warns-dead-code.rs
// compile-flags: --test

#![deny(dead_code)]

fn dead() {} //~ error: function is never used: `dead`

fn main() {}
